[tool.poetry]
name = "bs-feed-server-cdk-testing"
version = "0.1.0"
description = ""
authors = ["snowsheep <71830342+sheep-snow@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"
coverage = "^7.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
